# sketch-search

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.db  create_gallery.py  dev-config.yml  docker-compose-dev.yml  docker-compose.yml  preprocess_sketchy.py  pyproject.toml  ruff.toml
data/: images
data/supervised/: sketches
model/: pyproject.toml
model/src/sketch_search_model/: logger.py  model.py  photo_sketch_dataset.py  processing.py  train.py
model/src/sketch_search_model/config/: config.py  config_model.py
server/: pyproject.toml
server/src/server/: __init__.py  db_core.py  dependencies.py  logger.py  routes.py  server.py
server/src/server/auth/: guard.py
server/src/server/auth/otp/: models.py  repository.py  routes.py  sender.py  service.py
server/src/server/auth/otp/impl/: default_service.py  smtp_sender.py  sql_repository.py
server/src/server/config/: models.py
server/src/server/embedders/: default.py  sktr.py
server/src/server/events/: event_bus.py  events.py
server/src/server/images/: models.py  repository.py  routes.py  service.py
server/src/server/images/impl/: default_service.py  fs_repository.py
server/src/server/index/: embedder.py  exceptions.py  models.py  registry.py  repository.py  service.py  utils.py
server/src/server/index/impl/: default_service.py  pgvector_repository.py
server/src/server/observer/: background_embedder.py  fs_observer.py  path_resolver.py  routes.py
server/src/server/session/: models.py  repository.py  routes.py  service.py
server/src/server/session/impl/: default_service.py  sql_repository.py
server/src/server/user/: models.py  repository.py  routes.py  service.py
server/src/server/user/impl/: default_service.py  sql_repository.py
sktr/: pyproject.toml
sktr/src/sktr/: metrics.py  model.py  photo_sketch_dataset.py  train.py
sktr/src/sktr/config/: config.py  config_model.py
src/: config.py  config.yaml  photo_sketch_dataset.py  processing.py  type_defs.py
src/server/: __init__.py  config_model.py  db_core.py  dependencies.py  fs_observer.py  server.py  utils.py
src/server/auth/otp/: dependencies.py  exceptions.py  models.py  routes.py  service.py
src/server/config/: models.py  yaml_loader.py
src/server/db/: auth_models.py  db_core.py
src/server/embedder_registry/: dependencies.py  embedder.py  registry.py
src/server/embedders/: sktr.py
src/server/events/: event_bus.py  events.py
src/server/images/: errors.py  models.py  repository.py  routes.py  service.py
src/server/images/impl/: default_service.py  fs_repository.py
src/server/index/: dependencies.py  models.py  repository.py  service.py
src/server/index/embedder_registry/: dependencies.py
src/server/index/impl/: default_service.py  pgvector_repository.py
src/server/observer/: background_embedder.py  fs_observer.py
src/server/providers/: auth_provider.py  no_auth_provider.py  otp_auth_provider.py
src/server/session/: __init__.py  models.py  repository.py
src/server/session/impl/: default_service.py  sql_repository.py
src/server/user/: dependencies.py  models.py  repository.py
src/server/user/impl/: sql_repository.py
src/sktr/: model.py  photo_sketch_dataset.py  processing.py  train.py  type_defs.py  vector.py
src/sktr/config/: config.py  config_model.py
src/tests/: conftest.py  test_dataset.py  test_eval.py  test_pipeline.py  test_processing.py
tests/: conftest.py  test_dataset.py  test_processing.py
tests/server/: dummy_embedder.py  test_auth.py  test_background_embedder.py  test_bootstrapping.py  test_embedder_registry.py  test_fs_events.py  test_images.py  test_index.py  test_session.py  test_user.py
tests/server/mock/: auth.py  dummy_embedder.py
tests/sktr/: test_map_chunked.py
ui/: Dockerfile  components.json  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: index.css  main.tsx  store.ts
ui/src/SketchCanvas/: SketchSearchDialog.tsx  drawReducer.ts  index.tsx
ui/src/admin/: api.ts  hooks.ts  routes.tsx  schema.ts
ui/src/admin/AdminPage/: confirm-delete-dialog.tsx  index.tsx  user-form-dialog.tsx
ui/src/app/: App.tsx
ui/src/auth/: api.ts  hooks.ts  routes.ts  schema.ts  utils.ts
ui/src/auth/LoginStart/: index.tsx
ui/src/auth/LoginVerify/: index.tsx
ui/src/auth/RequireRole/: index.tsx
ui/src/gallery/: api.ts  hooks.ts  routes.ts  schema.ts  utils.ts
ui/src/gallery/Gallery/: AddImageDialog.tsx  DirectoryCell.tsx  DirectoryScopeToggle.tsx  FiltersBar.tsx  GoBackCell.tsx  ImageFilterPreview.tsx  ImagePreviewDialog.tsx  ImagesTable.tsx  ImagesTablePagination.tsx  SketchPreview.tsx  ThumbnailCell.tsx  index.tsx  queryReducer.ts
ui/src/general/: api.ts  navbar.tsx
ui/src/general/components/: alert-dialog.tsx  button.tsx  calendar.tsx  datetime-picker.tsx  (+10 more)
ui/src/lib/: utils.ts
ui/src/router/: SharedLayout.tsx  protected-route.tsx  public-route.tsx  queryClient.ts  rootRoute.ts  router.tsx
(+1 files in other folders)
