[project]
name = "sktr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jaxtyping>=0.3.2",
  "kornia>=0.8.1",
  "matplotlib>=3.10.3",
  "opencv-python>=4.12.0.88",
  "scikit-image>=0.25.2",
  "timm>=1.0.17",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
