[project]
name = "sktr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "jaxtyping>=0.3.2",
  "kornia>=0.8.1",
  "opencv-python>=4.12.0.88",
  "pydantic>=2.11.7",
  "pymilvus>=2.6.0",
  "scikit-image>=0.25.2",
  "tensorboard>=2.20.0",
  "timm>=1.0.17",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "tqdm>=4.67.1",
]

[project.scripts]
train = "sktr.train:train"
server = "sktr.server:serve"


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
tests = [
    "pytest>=8.4.1",
    "matplotlib>=3.10.3",
]
[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["src/tests/"]
pythonpath = ["src"]
