[project]
name = "server"
version = "0.1.0"
description = "Server application for Sketch-Based Image Retrieval"
requires-python = ">=3.13"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "sketch_search_model",
  "pydantic-settings>=2.12.0",
  "fastapi>=0.120",
  "uvicorn>=0.38",
  "watchdog>=6.0.0",
  "sqlmodel>=0.0.27",
  "pydantic[email]>=2.11.7",
  "pgvector>=0.4.1",
  "python-multipart>=0.0.20",
  "psycopg[binary]>=3.3.0",
]
[project.optional-dependencies]
tests = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "testcontainers[postgres]>=4.13.3",
]

[project.scripts]
server = "server:serve"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["./tests/"]
pythonpath = ["./src/"]
