
[project]
name = "sktr"
version = "0.1.0"
description = "Embedding model for Sketch-Based Image Retrieval"
requires-python = ">=3.13"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "jaxtyping>=0.3.2",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.12.0",
  "timm>=1.0.17",
  "tqdm>=4.67.1",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "tensorboard>=2.20.0",
]

[project.scripts]
train = "sktr.train:train"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
